[package]
name = "scrape_tribes_directory"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
select = "0.5.0"
scraper = "0.12.0"
regex = "1"
csv = "1.1"
tokio = { version = "1", features = ["full"] }
reqwest = "0.11.14"
