[package]
name = "tgd"
description = "A cli to search, query, and filter a tribal government directory"
homepage = "https://github.com/nativesintech/tribal_government_directory"
repository = "https://github.com/nativesintech/tribal_government_directory"
readme = "./README.md"
documentation = "https://docs.rs/tgd"
keywords = "natives in tech,indigenous,indigenous tech, native tech"
license = "GNU GENERAL PUBLIC LICENSE"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
select = "0.5.0"
scraper = "0.12.0"
regex = "1"
csv = "1.2"
tokio = { version = "1", features = ["full"] }
reqwest = "0.11.14"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
syn = "1.0.107"
clap = { version = "4.4.2", features = ["derive"] }
cli-table = "0.4.7"
